2nd commit: Version 2 of Focus Mode extension with blacklist

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Focus Mode</h1>
     <button id="toggleFocus">Start Focus</button>
+    <button id="options">Options</button> <!-- New Options button -->
     <script src="popup.js"></script>
   </body>
 </html>
