--- a/blocked.html
+++ b/blocked.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Site Blocked</title>
-  </head>
-  <body>
-    <h1>Stay Focused!</h1>
-    <p>This site is currently blocked by Focus Mode.</p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stay Focused - Focus Mode</title>
+    <link rel="stylesheet" href="blocked.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Stay Focused!</h1>
+        <div class="message">
+            <p>This site is currently blocked by Focus Mode.</p>
+        </div>
+        <div class="quote">
+            "The successful warrior is the average man, with laser-like focus."
+            <br>
+            <span class="author">- Bruce Lee</span>
+        </div>
+        <button id="return-button">Return to Safety</button>
+    </div>
+    <audio id="ambience" loop>
+        <source src="water-stream.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    <button id="toggle-sound" class="sound-toggle">🔇</button>
+    <script src="blocked.js"></script>
+</body>
 </html>
